build front with nix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,46 +17,51 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Node toolchain
-        uses: actions/setup-node@v1
+      - uses: cachix/install-nix-action@v17
         with:
-          node-version: "16.x"
-      - name: Cache PureScript dependencies
-        uses: actions/cache@v2
-        with:
-          key: ${{ runner.os }}-spago-${{ hashFiles('**/*.dhall') }}
-          path: |
-            .spago
-            output
-      - name: Cache NPM dependencies
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-      - name: Install NPM dependencies
-        run: npm install
-      - name: Build the project
+          extra_nix_config: |
+            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+            substituters = https://br4ch1st0chr0n3-nix-managed.cachix.org https://br4ch1st0chr0n3-flakes.cachix.org https://cache.nixos.org/ https://hydra.iohk.io https://nix-community.cachix.org
+            trusted-public-keys = br4ch1st0chr0n3-nix-managed.cachix.org-1:sDKsfgu5fCCxNwVhZg+AWeGvbLlEtZoyzkSNKRM/KAo= br4ch1st0chr0n3-flakes.cachix.org-1:Dyc2yLlRIkdbq8CtfOe24QQhQVduQaezkyV8J9RhuZ8= cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
+
+      # - uses: cachix/cachix-action@v10
+      #   with:
+      #     name: ${{ matrix.cache }}
+      #     # If you chose API tokens for write access OR if you have a private cache
+      #     authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+      # - name: Push inputs to cachix
+      #   run: |
+      #     # https://docs.cachix.org/pushing#flakes
+
+      #     nix flake archive --json \
+      #       | jq -r '.path,(.inputs|to_entries[].value.path)' \
+      #       | cachix push ${{ matrix.cache }}
+      # - name: Push devshell to cachix
+      #   run: |
+      #     nix develop --profile dev-profile
+      #     cachix push ${{ matrix.cache }} dev-profile
+
+      - name: Build with Nix
         run: |
-          npm install -g spago@0.20.9
-          npm install -g purescript@0.15.4
-          npm run build:gh-pages
+          nix develop -c bash -c '
+            npm run build:gh-pages
+          '
       - name: GitHub Pages action
         uses: peaceiris/actions-gh-pages@v3.7.3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          # example with a default working dir and a publish dir
-          # https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
           publish_dir: ./front/docs
           force_orphan: true
 
   back:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: back
+    strategy:
+      matrix:
+        os: [ubuntu-22.04]
+        cache: [br4ch1st0chr0n3-nix-managed]
     steps:
       - uses: actions/checkout@v3
       - uses: cachix/install-nix-action@v17
@@ -84,9 +89,8 @@ jobs:
       #     cachix push ${{ matrix.cache }} dev-profile
       - name: Build with Nix
         run: |
-          cd back
           nix build
-          cp result/bin/back .
+          cp result/bin/back ./back
       - name: Push git subdirectory as a branch
         uses: s0/git-publish-subdir-action@v2.5.1
         env:
