--- a/front/package.json
+++ b/front/package.json
@@ -15,11 +15,9 @@
     "build": "spago build",
     "dev": "parcel dev/index.html --open",
     "test": "spago test",
-    "build:init": "npm i && npm run build",
-    "prequick-start": "npm i",
     "quick-start": "npm run build",
     "postquick-start": "npm run dev",
-    "prebuild:min": "npm i && rm -rf min && mkdir min && cp dev/* min/",
+    "prebuild:min": "rm -rf min && mkdir min && cp dev/* min/",
     "build:min": "spago bundle-app --to min/index.js --minify && parcel build min/index.html",
     "build:gh-pages": "npm run build:min && cp -TR min docs",
     "build:prod": "npm run build:min && cp -TR min prod",
