use a helper folder

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
+
       - uses: cachix/install-nix-action@v17
         with:
           extra_nix_config: |
@@ -47,6 +48,7 @@ jobs:
           nix develop -c bash -c '
             npm run build:gh-pages
           '
+
       - name: GitHub Pages action
         uses: peaceiris/actions-gh-pages@v3.7.3
         with:
@@ -65,12 +67,13 @@ jobs:
         cache: [br4ch1st0chr0n3-nix-managed]
     steps:
       - uses: actions/checkout@v3
-      # - uses: cachix/install-nix-action@v17
-      #   with:
-      #     extra_nix_config: |
-      #       access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
-      #       substituters = https://br4ch1st0chr0n3-nix-managed.cachix.org https://br4ch1st0chr0n3-flakes.cachix.org https://cache.nixos.org/ https://hydra.iohk.io https://nix-community.cachix.org
-      #       trusted-public-keys = br4ch1st0chr0n3-nix-managed.cachix.org-1:sDKsfgu5fCCxNwVhZg+AWeGvbLlEtZoyzkSNKRM/KAo= br4ch1st0chr0n3-flakes.cachix.org-1:Dyc2yLlRIkdbq8CtfOe24QQhQVduQaezkyV8J9RhuZ8= cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
+
+      - uses: cachix/install-nix-action@v17
+        with:
+          extra_nix_config: |
+            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+            substituters = https://br4ch1st0chr0n3-nix-managed.cachix.org https://br4ch1st0chr0n3-flakes.cachix.org https://cache.nixos.org/ https://hydra.iohk.io https://nix-community.cachix.org
+            trusted-public-keys = br4ch1st0chr0n3-nix-managed.cachix.org-1:sDKsfgu5fCCxNwVhZg+AWeGvbLlEtZoyzkSNKRM/KAo= br4ch1st0chr0n3-flakes.cachix.org-1:Dyc2yLlRIkdbq8CtfOe24QQhQVduQaezkyV8J9RhuZ8= cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
 
       # - uses: cachix/cachix-action@v10
       #   with:
@@ -88,15 +91,16 @@ jobs:
       #   run: |
       #     nix develop --profile dev-profile
       #     cachix push ${{ matrix.cache }} dev-profile
-      # - name: Build with Nix
-      #   run: |
-      #     nix build
-      #     cp result/bin/back ./back
+
+      - name: Build with Nix
+        run: |
+          nix build
+
       - name: Prepare dir
         run: |
           mkdir artifacts
-          cd artifacts
-          touch back
+          cp result/bin/back Procfile ./artifacts
+
       - name: Push git subdirectory as a branch
         uses: s0/git-publish-subdir-action@v2.5.1
         env:
@@ -104,11 +108,11 @@ jobs:
           BRANCH: back-artifacts
           FOLDER: back/artifacts
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # CLEAR_GLOBS_FILE: back/.clear-globs-file
-      # - name: Deploy to Heroku
-      #   uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-      #   with:
-      #     heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-      #     heroku_app_name: try-phi-back #Must be unique in Heroku
-      #     heroku_email: ${{secrets.HEROKU_EMAIL}}
-      #     branch: back-artifacts
+
+      - name: Deploy to Heroku
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: try-phi-back
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
+          branch: back-artifacts
